# git-bash-ed

./: .gitignore  .pre-commit-config.yaml  .shellcheckrc  Makefile  README.md  pyproject.toml
.github/workflows/: makefile.yml
src/: datetime.sh  environment.sh  file.sh  format.sh  function-template.sh  logging.sh  match.sh  network.sh  path.sh  script-template
test/: datetime.bats  environment.bats  file.bats  format.bats  function-template.bats  logging.bats  match.bats  network.bats  path.bats  script-template.bats
test/test_helper/: common-setup.bash
